<resources>
    <string name="app_name">EGyaan</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="action_account">Account Information</string>
    <string name="list_home">Home</string>
    <string name="app_timeTable">Timetable</string>
    <string name="app_notes">Notes</string>
    <string name="app_noticeboard">Noticeboard</string>
    <string name="app_test">Tests</string>
    <string name="title_activity_timetable">Timetable</string>
    <string name="title_activity_my_information">My Information</string>
    <string name="content_student_name">Student Name</string>
    <string name="content_description">Collapsing Description</string>
    <string name="profile_image">profileImage</string>
    <string name="list_courses_enrolled">Select Course</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_full_notes_view">Notes Details</string>
    <string name="title_activity_tests">Tests</string>
    <string name="title_activity_tests_details">Tests Details</string>
    <string name="title_activity_noticeboard">Noticeboard</string>
    <string name="user_profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="title_activity_full_noticeboard_view">Detailed Notice</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>

    <string name="pref_header_about">About</string>
    <string name="summary_about">EGyaan is an Innovative Learning + School management product which is
        all devices (Tablet and Smartphones) ready that brings in “digital technology” into the
        traditional education system.</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="visit_website">Visit Website</string>
    <string name="url_website">http://www.e-gyaan.in/</string>
    <string name="email_us">Email us at</string>
    <string name="email_id">info@e-gyaan.in</string>
    <string name="title_github">GitHub </string>
    <string name="url_github">https://github.com/badalkotak/EGyaan_OpenSource</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="key_log_out">Log out</string>
    <string name="pref_header_information">Information</string>
    <string name="pref_header_account">Account</string>
    <string name="key_log_out_summary">All your data will be wiped</string>
    <string name="title_activity_profile">Profile</string>
</resources>
